added vscode workspace

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "natcar"]
 	path = natcar
 	url = ../natcar.git
+
+[submodule "eec195_lab4"]
+	path = eec195_lab4
+	url = ../eec195_lab4.git
